# FastAPIOrder

./: docker-compose.yml  pyproject.toml
app/: .env.template  create_app.py  main.py
app/app_types/: __init__.py  events.py  session_price.py
app/constants/: __init__.py  booking.py  hall.py  movie.py  order.py  seat.py  seat_type.py  session.py  ticket.py  user.py
app/core/: __init__.py  config.py  fs_router.py  taskiq_broker.py
app/dependencies/: __init__.py  domain.py  infrastructure.py  repositories.py  services.py  usage.py
app/domain/: __init__.py  booking.py  rules.py
app/events/: __init__.py  event_list.py  event_session.py  eventer.py  order.py  ticket.py
app/exceptions/: business.py  db.py
app/handlers/: __init__.py  base.py  hall.py  movie.py  seat.py  session.py  session_price.py
app/integrity_handlers/: hall.py  movie.py  order.py  seat.py  session.py  session_price.py  ticket.py  user.py
app/log/: __init__.py
app/repositories/: __init__.py  base.py  events.py  hall.py  inbox_events.py  movie.py  order.py  seat.py  session.py  session_price.py  ticket.py  unit_of_work.py  user.py
app/schemas/: base.py  booking.py  db.py  events.py  hall.py  inbox_events.py  movie.py  order.py  seat.py  session.py  session_price.py  ticket.py  user.py
app/service/: base.py  hall.py  movie.py  seat.py  session.py  session_price.py  ticket.py  user.py
app/services/: __init__.py  base.py  data_assembler.py  data_existence.py  hall.py  inbox_unit_of_work.py  movie.py  order.py  seat.py  session.py  session_price.py  task_sheduler.py  ticket.py  user.py
app/tasks/: order.py
app/utils/: __init__.py  collections.py  orjson_serializers.py  (+2 more)
(+91 files in other folders)
