[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.133.1"
uvicorn = {extras = ["standard"], version = "^0.41.0"}
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.13.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.47"}
asyncpg = "^0.31.0"
alembic = "^1.18.4"
mypy = "^1.19.1"
nanoid = "==2.0.0"
orjson = "^3.11.7"
taskiq = "^0.12.1"
taskiq-fastapi = "^0.4.0"
taskiq-redis = "^1.2.2"
dishka = "^1.8.0"

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"

[tool.mypy]
python_version = "3.13"
plugins = [
    "pydantic.mypy"
]
